# FoveaEnv-

./: .gitattributes  .gitignore  Dockerfile  License  README.md  app.py  client.py  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rl_env.py  test_basic.py  train.py
baselines/: grading_agent.py  random_agent.py
logs/PPO_1/: events.out.tfevents.1775647797.LAPTOP-HCBANO4P.21000.0
logs/PPO_2/: events.out.tfevents.1775647938.LAPTOP-HCBANO4P.6228.0
logs/PPO_3/: events.out.tfevents.1775652727.LAPTOP-HCBANO4P.22300.0
server/: app.py
